--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>qa-technical-api-test</groupId>
     <artifactId>qa-technical-api-test</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <!-- Extent Report -->
         <dependency>
@@ -32,6 +44,20 @@
             <artifactId>json-path</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <!--java-hamcrest -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>2.0.0.0</version>
+        </dependency>
+
+        <!--&lt;!&ndash; json-simple &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>com.googlecode.json-simple</groupId>-->
+            <!--<artifactId>json-simple</artifactId>-->
+            <!--<version>1.1.1</version>-->
+        <!--</dependency>-->
+
 
         <!-- selenium-server-standalone -->
         <dependency>
